--- a/www/index.html
+++ b/www/index.html
@@ -2,27 +2,15 @@
 <html>
   <head>
     <meta charset="utf-8">
-    <meta name="viewport" content="user-scalable=no, initial-scale=1, maximum-scale=1, minimum-scale=1, width=device-width, height=device-height" />
+    <meta name="viewport" content="user-scalable=no, initial-scale=1, maximum-scale=1, minimum-scale=1, width=device-width, height=device-height">
     <title>Welcome</title>
 
 
     <!-- compiled css output -->
     <link href="css/ionic.app.css" rel="stylesheet">
 
-    <style>
-      #map_wrapper {
-        height: 400px;
-      }
-
-      #map_canvas {
-          width: 100%;
-          height: 100%;
-      }
-
-      .scroll {
-        height: 100%;
-      }
-    </style>
+    <!-- include Style -->
+    <link href="css/style.css" rel="stylesheet">
 
     <!-- ionic/angularjs js -->
     <script src="lib/ionic/js/ionic.bundle.js"></script>
@@ -40,8 +28,10 @@
   </head>
   <body ng-app="MenuNav">
 
-  <!-- Back button -->
-	<ion-nav-bar class="bar-stable"></ion-nav-bar>
+    <!-- Back button -->
+	<ion-nav-bar class="bar-stable">
+		<ion-nav-back-button class="button-clear"><i class="icon ion-chevron-left"></i> Back</ion-nav-back-button>
+	</ion-nav-bar>
 
 	<ion-nav-view></ion-nav-view>
 
@@ -52,55 +42,47 @@
 
         <!-- Navigation button -->
         <ion-nav-buttons side="left">
-          <button class="button button-icon icon ion-android-globe"></button>
-          <button class="button button-icon icon ion-ios-list-outline"></button>
-          <button class="button button-icon icon ion-ios-heart-outline"></button>
+          <button class="button button-icon icon ion-navicon"></button>
+          <button class="button button-icon icon ion-navicon"></button>
+          <button class="button button-icon icon ion-navicon"></button>
         </ion-nav-buttons>
-
         <ion-nav-buttons side="right">
           <!--  button-icon icon icon-right ion-arrow-right-c -->
-          <button class="button button-icon icon ion-android-options" ui-sref="{{navigation.pageHeaderRight.direction}}"></button>
+          <button class="button button-clear button-positive" ui-sref="{{navigation.pageHeaderRight.direction}}">{{navigation.pageHeaderRight.title}} &nbsp;</button>
         </ion-nav-buttons>
 
-        <ion-content scroll="false" data-tap-disabled="true">
+        <ion-content scroll="false" data-tap-disabled="true" id="wrapper">
 
           <!-- Google Map -->
-          <div id="map_wrapper" style="box-shadow: 0px 1px 0px #b4b4b4;">
+          <div id="map_content">
             <div id="map_canvas"></div>
           </div>
 
           <!-- Event information -->
-          <div ng-if="eventSelected.name" 
-            class="padding" 
-            style="text-align: center; font-size: 1.2em">
-            <p style="box-shadow: 0px 1px 0px #b4b4b4;">
-              <i class="icon ion-home"></i>
-              {{eventSelected.name}}
-            </p>
-
+          <div ng-if="eventSelected.name" id="description_event_wrapper" class="padding">
+            <!-- header of description-->
+            <div class ="row" id="wrapper">
+              <div class= "col-15" id="button_favoris">
+                <button class="button button-assertive button-small" ng-click="addtoFavoris()">
+                  Favoris  <i class="icon ion-ios-heart-outline"></i>
+                </button>
+              </div>
+              <div class ="col-70" id="description_event_name">
+                <b> {{eventSelected.name}} </b>
+                {{eventSelected.afterName}}
+              </div>
+              <div class="col-15" id="button_details">
+                <button class="button button-assertive button-small" ng-click="openDetails()">
+                  Détails  <i class="icon ion-arrow-right-a"></i>
+                </button>
+              </div>
+            </div>
+            <!-- description details-->
             <p ng-bind-html="eventSelected.desc"></p>
-
-            <button class="button button-block button-positive">
-              Join the party
-            </button>
           </div>
 
         </ion-content>
-
       </ion-view>
-    </script>
-
-    <script type="text/ng-template" id="filter.html">
-      <ion-view title="{{navigation.page1.title}}">
-
-
-        <ion-nav-buttons side="left">
-           <button class="button button-icon" ng-click="goBack()">back</button>
-        </ion-nav-buttons>
-
-        <ion-content scroll="false" data-tap-disabled="true"></ion-content>
-
-        </ion-view>
     </script>
 
     <!-- ionic/angularjs js -->
