--- a/www/index.html
+++ b/www/index.html
@@ -23,6 +23,8 @@
 
     <script src="js/index.js"></script>
 
+    <script src="data.json"></script>
+
     <!-- Google JavaScript API -->
     <script src="http://maps.google.com/maps/api/js?sensor=false" type="text/javascript"></script>
   </head>
