--- a/www/index.html
+++ b/www/index.html
@@ -19,13 +19,17 @@
     <script src="lib/ngCordova/dist/ng-cordova.js"></script>
     <script src="cordova.js"></script>
 
+    <script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.4.9/angular.min.js"></script>
+
     <!-- Google JavaScript API -->
     <script src="http://maps.google.com/maps/api/js?sensor=false" type="text/javascript"></script>
     <script src="http://google-maps-utility-library-v3.googlecode.com/svn/trunk/markerwithlabel/src/markerwithlabel.js"></script>
     
+     <!-- your data's json -->
+    <script type="text/javascript" src="json/data.json"></script>
+
     <!-- your app's js -->
     <script src="js/app.js"></script>
-
     <script src="js/index.js"></script>
 
   </head>
