ajout de la taille du menu slide + modification de la google map

--- a/www/index.html
+++ b/www/index.html
@@ -57,7 +57,7 @@
   </ion-pane>
   </ion-side-menu-content>
 
-  <ion-side-menu side ="left" expose-aside-when="(min-width:640px)">
+  <ion-side-menu width="150" side ="left" expose-aside-when="(min-width:640px)">
     <ion-header-bar class="bar-stable title">
       <h2>Simplyk</h2>
     </ion-header-bar>
