chargement dynamique détail évenement entre les vue Home et HomeEvent

--- a/www/detailShortEvent.html
+++ b/www/detailShortEvent.html
@@ -1,5 +1,5 @@
 <div class="volunteer-header">
-  <div class="volunteer-details button button-icon icon  ion-ios-search-strong" ui-sref="homeEvent"></div>
+  <div class="volunteer-details button button-icon icon  ion-ios-search-strong" ui-sref="homeEvent({eventId: itemSelected.id})"></div>
   <div class="volunteer-favorite button button-icon icon  ion-ios-heart-outline"></div>
   <div class="volunteer-title">
     <p>{{itemSelected.titre}}</p>
