ajout fonctionnalité 'ajout et suppression d'un événement en favoris'

--- a/www/detailEvent.html
+++ b/www/detailEvent.html
@@ -1,6 +1,9 @@
 <div class="volunteer-header">
         <div class="volunteer-join button button-icon icon  ion-android-checkbox-outline"></div>
-        <div class="volunteer-favorite button button-icon icon  ion-ios-heart-outline"></div>
+        
+          <!-- add/delete to bookmark button -->
+        <div ng-class="{true: 'volunteer-favorite button button-icon icon ion-ios-heart', false: 'volunteer-favorite button button-icon icon ion-ios-heart-outline'}[itemInFavorite]" data-ng-click="changeBookMark(itemSelected)"></div>
+
         <div class="volunteer-title">
           <p>{{itemSelected.titre}}</p>
           <p>#{{itemSelected.id}}</p>
