--- a/www/detailEvent.html
+++ b/www/detailEvent.html
@@ -1,7 +1,7 @@
 <div class="volunteer-header">
         <div class="volunteer-join button button-icon icon  ion-android-checkbox-outline"></div>
         
-          <!-- add/delete to bookmark button -->
+        <!-- add/delete to/from bookmark button -->
         <div ng-class="{true: 'volunteer-favorite button button-icon icon ion-ios-heart', false: 'volunteer-favorite button button-icon icon ion-ios-heart-outline'}[itemInFavorite]" data-ng-click="changeBookMark(itemSelected)"></div>
 
         <div class="volunteer-title">
