--- a/www/index.html
+++ b/www/index.html
@@ -14,22 +14,21 @@
 
   </head>
   <body ng-app="MenuNav" ng-controller="AppCtrl">
-  <ion-side-menus>      
-    <ion-pane ion-side-menu-content>
-      <ion-nav-bar class="bar-stable">
-        <ion-nav-buttons side="left">
-         <button menu-toggle="left" class="button button-icon icon ion-navicon"></button>
-        </ion-nav-buttons>
-      </ion-nav-bar>
-      <ion-nav-view></ion-nav-view>
-    </ion-pane>
-    </ion-side-menu-content>
-    <ion-side-menu width="150" side ="left" expose-aside-when="(min-width:768px)">
-      <ion-header-bar class="bar-stable title">
-        <h2>Simplyk</h2>
-      </ion-header-bar>
-      <ion-content>
-        <div class="list">
+    <ion-side-menus>    
+      <ion-pane ion-side-menu-content>
+        <ion-nav-bar class="bar-stable">
+          <ion-nav-buttons side="left">
+           <button menu-toggle="left" class="button button-icon icon ion-navicon"></button>
+          </ion-nav-buttons>
+        </ion-nav-bar>
+        <ion-nav-view></ion-nav-view>
+      </ion-pane ion-side-menu-content>
+      <ion-side-menu width="150" side ="left" expose-aside-when="(min-width:768px)">
+        <ion-header-bar class="bar-stable title">
+          <h2>Simplyk</h2>
+        </ion-header-bar>
+        <ion-content>
+          <div class="list">
             <button class="wrapper {{navigation.pageHeaderLeft1.icon}}" ui-sref="{{navigation.pageHeaderLeft1.directionState}}">
               {{navigation.pageHeaderLeft1.titleShort}}
               </button>
@@ -39,10 +38,10 @@
             <button class="wrapper {{navigation.pageHeaderLeft3.icon}}" ui-sref="{{navigation.pageHeaderLeft3.directionState}}">
               {{navigation.pageHeaderLeft3.titleShort}}
               </button>
-        </div>
-      </ion-content>
-    </ion-side-menu>        
-  </ion-side-menus>
+          </div>
+        </ion-content>
+      </ion-side-menu>        
+    </ion-side-menus>
 
 
     <!-- Page 1 -->
@@ -225,5 +224,6 @@
     <!-- Google JavaScript API -->
     <script src="http://maps.google.com/maps/api/js?sensor=false" type="text/javascript"></script>
     <script src="http://google-maps-utility-library-v3.googlecode.com/svn/trunk/markerwithlabel/src/markerwithlabel.js"></script>
+    <script src="http://google-maps-utility-library-v3.googlecode.com/svn/trunk/markerclusterer/src/markerclusterer.js"></script>
   </body>
 </html>
