--- a/www/index.html
+++ b/www/index.html
@@ -226,5 +226,8 @@
   <script src="http://maps.google.com/maps/api/js?sensor=false" type="text/javascript"></script>
 
   <script src="http://google-maps-utility-library-v3.googlecode.com/svn/trunk/markerwithlabel/src/markerwithlabel.js"></script>
+
+  <script src="http://google-maps-utility-library-v3.googlecode.com/svn/trunk/markerclusterer/src/markerclusterer.js"></script>
+  
   </body>
 </html>
