changement icone détail événement et soulignage item navbar selectionné

--- a/www/detailShortEvent.html
+++ b/www/detailShortEvent.html
@@ -1,6 +1,6 @@
 <div class="volunteer-header">
   
-  <div class="volunteer-details button button-icon icon  ion-ios-search-strong" ui-sref="homeEvent({eventId: itemSelected.id})"></div>
+  <div class="volunteer-details button button-icon icon  ion-arrow-right-b" ui-sref="homeEvent({eventId: itemSelected.id})"></div>
   
   <!-- add/delete to/from bookmark button -->
   <div ng-class="{true: 'volunteer-favorite button button-icon icon ion-ios-heart', false: 'volunteer-favorite button button-icon icon ion-ios-heart-outline'}[itemInFavorite]" data-ng-click="changeBookMark(itemSelected)"></div>
