--- a/www/index.html
+++ b/www/index.html
@@ -42,7 +42,7 @@
     
         <!-- Navigation button -->
         <ion-nav-buttons side="left">
-          <button class="{{navigation.pageHeaderLeft1.icon}}" ui-sref="{{navigation.pageHeaderLeft1.directionState}}"></button>
+          <button class="borderB {{navigation.pageHeaderLeft1.icon}}" ui-sref="{{navigation.pageHeaderLeft1.directionState}}"></button>
           <button class="{{navigation.pageHeaderLeft2.icon}}" ui-sref="{{navigation.pageHeaderLeft2.directionState}}"></button>
           <button class="{{navigation.pageHeaderLeft3.icon}}" ui-sref="{{navigation.pageHeaderLeft3.directionState}}"></button>
         </ion-nav-buttons>
@@ -156,7 +156,7 @@
       <ion-nav-buttons side="left">
         <button class="{{navigation.pageHeaderLeft1.icon}}" ui-sref="{{navigation.pageHeaderLeft1.directionState}}"></button>
         <button class="{{navigation.pageHeaderLeft2.icon}}" ui-sref="{{navigation.pageHeaderLeft2.directionState}}"></button>
-        <button class="{{navigation.pageHeaderLeft3.icon}}" ui-sref="{{navigation.pageHeaderLeft3.directionState}}"></button>
+        <button class="borderB {{navigation.pageHeaderLeft3.icon}}" ui-sref="{{navigation.pageHeaderLeft3.directionState}}"></button>
       </ion-nav-buttons>
       <ion-content id="view" ng-controller="FavoriteCtrl" scroll="false" data-tap-disabled="true">   
         <div class="master">
@@ -184,7 +184,7 @@
      <ion-view>
       <ion-nav-buttons side="left">
         <button class="{{navigation.pageHeaderLeft1.icon}}" ui-sref="{{navigation.pageHeaderLeft1.directionState}}"></button>
-        <button class="{{navigation.pageHeaderLeft2.icon}}" ui-sref="{{navigation.pageHeaderLeft2.directionState}}"></button>
+        <button class="borderB {{navigation.pageHeaderLeft2.icon}}" ui-sref="{{navigation.pageHeaderLeft2.directionState}}"></button>
         <button class="{{navigation.pageHeaderLeft3.icon}}" ui-sref="{{navigation.pageHeaderLeft3.directionState}}"></button>
       </ion-nav-buttons>
       <ion-content id="viewList" ng-controller="ListCtrl" scroll="false" data-tap-disabled="true">
