correction placement du bouton favori sur la vue détail événement

--- a/www/detailEvent.html
+++ b/www/detailEvent.html
@@ -14,7 +14,7 @@
     <div class="volunteer-join button button-icon icon ion-android-checkbox-outline" ng-click="participateToEvent()"></div>
     
     <!-- add/delete to/from bookmark button -->
-    <div ng-class="{true: 'volunteer-favorite button button-icon icon ion-ios-heart', false: 'volunteer-favorite button button-icon icon ion-ios-heart-outline'}[itemInFavorite]" data-ng-click="changeBookMark(itemSelected)"></div>
+    <div ng-class="{true: 'volunteer-favorite-details button button-icon icon ion-ios-heart', false: 'volunteer-favorite-details button button-icon icon ion-ios-heart-outline'}[itemInFavorite]" data-ng-click="changeBookMark(itemSelected)"></div>
 
     <div class="volunteer-title">
       <p>{{itemSelected.titre}}</p>
