ajout des événements où l'on est inscrit aux favoris
Un bug impliquant l'arret du contrôleur de la vue carte lors de la manipulation suivante : sur la vue home de départ, cliquer sur plus de détail puis s'inscrire à l'événement, afficher la vue des favoris avec le menu de navigation, revenir à la vue home (carte) avec le menu de navigation, ajouter l'événement actuel aux favoris avec le bouton coeur puis revenir à la vue favoris avec le menu de navigation. La vue des favoris est alors bloquée avec 1 favoris au lieu de 2 et le contrôleur home (carte) n'affiche plus les informations sur la vue détail court \n Les Point Of Interest.

--- a/www/detailEvent.html
+++ b/www/detailEvent.html
@@ -11,10 +11,10 @@
   </div>
           
   <div class="volunteer-header">
-    <div class="volunteer-join button button-icon icon ion-android-checkbox-outline" ng-click="participateToEvent()"></div>
-    
+    <div ng-class="{true: 'volunteer-join button button-icon icon ion-android-checkbox-outline orangeColor', false: 'volunteer-join button button-icon icon ion-android-checkbox-outline'}[itemInEventJoined]" ng-click="participateToEvent()"></div>
+
     <!-- add/delete to/from bookmark button -->
-    <div ng-class="{true: 'volunteer-favorite-details button button-icon icon ion-ios-heart', false: 'volunteer-favorite-details button button-icon icon ion-ios-heart-outline'}[itemInFavorite]" data-ng-click="changeBookMark(itemSelected)"></div>
+    <div ng-class="{true: 'volunteer-favorite-details button button-icon icon ion-ios-heart', false: 'volunteer-favorite-details button button-icon icon ion-ios-heart-outline'}[itemInBookMark]" data-ng-click="changeBookMarkStatus(itemSelected)"></div>
 
     <div class="volunteer-title">
       <p>{{itemSelected.titre}}</p>
