--- a/www/detailEvent.html
+++ b/www/detailEvent.html
@@ -14,19 +14,25 @@
         </div>
         <a class="item item-text-wrap item-icon-left" href="#">
           <i class="icon ion-calendar"></i>
-          Du {{itemSelected.dateDebut | date: 'dd/MM/yyyy'}} au {{itemSelected.dateDeFin | date: 'dd/MM/yyyy'}}
+          Du {{itemSelected.dateDeDebut | date: 'dd/MM/yyyy'}} au {{itemSelected.dateDeFin | date: 'dd/MM/yyyy'}}
         </a>
         <a class="item item-text-wrap item-icon-left" href="#">
           <i class="icon ion-clock"></i>
-          Du {{itemSelected.heureDeDebut}} à {{itemSelected.heureDeFin}}
+          De {{itemSelected.heureDeDebut}} à {{itemSelected.heureDeFin}}
         </a>
         <a class="item item-text-wrap item-icon-left" href="#">
           <i class="icon ion-gear-a"></i>
-          engagement de {{itemSelected.duree}}
+          Engagement de {{itemSelected.duree}}
         </a>
         <a class="item item-text-wrap item-icon-left" href="#">
           <i class="icon ion-loop"></i>
-          periodicité {{itemSelected.periodicity}}
+          {{itemSelected.periodicity}}
+        </a>
+        <a class="item item-text-wrap item-icon-left" href="#">
+          <i class="icon ion-calendar"></i>
+          <span ng-repeat="jour in itemSelected.jours">
+          {{jour}}
+          </span>
         </a>
 
         <div class="item item-divider">
