--- a/www/detailShortEvent.html
+++ b/www/detailShortEvent.html
@@ -13,13 +13,12 @@
   </div>
   <a class="item item-text-wrap item-icon-left" href="#">
     <i class="icon ion-calendar"></i>
-    Du {{itemSelected.dateDebut | date: 'dd/MM/yyyy'}} au {{itemSelected.dateDeFin | date: 'dd/MM/yyyy'}}
+    Du {{itemSelected.dateDeDebut | date: 'dd/MM/yyyy'}} au {{itemSelected.dateDeFin | date: 'dd/MM/yyyy'}}
   </a>
   <a class="item item-text-wrap item-icon-left" href="#">
     <i class="icon ion-clock"></i>
-    Du {{itemSelected.heureDeDebut}} à {{itemSelected.heureDeFin}}
+    De {{itemSelected.heureDeDebut}} à {{itemSelected.heureDeFin}}
   </a>
-
 
   <div class="item item-divider">
     Description
