--- a/www/index.html
+++ b/www/index.html
@@ -220,12 +220,13 @@
 
   <!-- your app's js -->
   <script src="js/app.js"></script>
-
+  <script src="js/key.js"></script>
   <script src="js/index.js"></script>
 
   <!-- Google JavaScript API -->
   <script src="http://maps.google.com/maps/api/js?sensor=false" type="text/javascript"></script>
   <script src="http://google-maps-utility-library-v3.googlecode.com/svn/trunk/markerwithlabel/src/markerwithlabel.js"></script>
   <script src="http://google-maps-utility-library-v3.googlecode.com/svn/trunk/markerclusterer/src/markerclusterer.js"></script>
+  <script src="https://sdk.amazonaws.com/js/aws-sdk-2.1.11.min.js"></script>
   </body>
 </html>
