--- a/www/index.html
+++ b/www/index.html
@@ -28,8 +28,8 @@
       </ion-header-bar>
       <ion-content>
         <div class="list">
-          <button class="wrapper {{navigation.pageHeaderLeft1.icon}}" ui-sref="{{navigation.pageHeaderLeft1.directionState}}"></button>
-          <button class="wrapper {{navigation.pageHeaderLeft2.icon}}" ui-sref="{{navigation.pageHeaderLeft2.directionState}}"></button>
+          <button class="wrapper {{navigation.pageHeaderLeft1.icon}}" ui-sref="{{navigation.pageHeaderLeft1.directionState}}" ng-disabled="false"></button>
+          <button class="wrapper {{navigation.pageHeaderLeft2.icon}}" ui-sref="{{navigation.pageHeaderLeft2.directionState}}" ng-disabled="false"></button>
           <button class="wrapper {{navigation.pageHeaderLeft3.icon}}" ui-sref="{{navigation.pageHeaderLeft3.directionState}}"></button>
         </div>
       </ion-content>
@@ -42,8 +42,8 @@
     
         <!-- Navigation button -->
         <ion-nav-buttons side="left">
-          <button class="borderB {{navigation.pageHeaderLeft1.icon}}" ui-sref="{{navigation.pageHeaderLeft1.directionState}}"></button>
-          <button class="{{navigation.pageHeaderLeft2.icon}}" ui-sref="{{navigation.pageHeaderLeft2.directionState}}"></button>
+          <button class="borderB {{navigation.pageHeaderLeft1.icon}}" ui-sref="{{navigation.pageHeaderLeft1.directionState}}" ng-disabled="{{disabled}}"></button>
+          <button class="{{navigation.pageHeaderLeft2.icon}}" ui-sref="{{navigation.pageHeaderLeft2.directionState}}" ng-disabled="{{disabled}}"></button>
           <button class="{{navigation.pageHeaderLeft3.icon}}" ui-sref="{{navigation.pageHeaderLeft3.directionState}}"></button>
         </ion-nav-buttons>
         <ion-nav-buttons side="right">
@@ -51,23 +51,34 @@
           <!--  button-icon icon icon-right ion-arrow-right-c -->
           <img ng-show="logged" class="valign userProfil-img" src="{{userPictureFB}}" ng-click="logOut()" />
           <span ng-show="logged" class="valign userProfil-text">{{userNameFB}}</span>
-          <button class="valign {{navigation.pageHeaderRight.icon}}" ui-sref="{{navigation.pageHeaderRight.directionState}}"></button>
+          <button class="valign {{navigation.pageHeaderRight.icon}}" ui-sref="{{navigation.pageHeaderRight.directionState}}" ng-disabled="{{disabled}}"></button>
         </ion-nav-buttons>
         <ion-content ng-controller="HomeCtrl" scroll="false" data-tap-disabled="true" id="wrapper">
           <!-- Google Map -->
           <div id="map_content">
             <div id="map_canvas"></div>
           </div>
-   
+          <div class="scrollable-wrapper" id="wrapper_offline">
+            <div style="text-align: center;">
+              <p>
+                <br /> Vous n'avez pas accès au wifi
+                <br /> Vous pouvez toutefois consulter vos favoris !
+              </p>
+            </div>
+            <div style="text-align: center;">
+             <i class = "icon ion-sad larger"></i>
+            </div>
+          </div>
           <!-- Landscape mode, event description -->
           <div class="paysage scrollable-wrapper" id="description_event">
             <div ng-include src="'./detailEvent.html'"></div>
           </div>
 
           <!-- Portrait mode, event description -->
-          <div class="portrait" id="description_event_wrapper"
+          <div class="portrait scrollable-wrapper" id="description_event_wrapper"
             <div ng-include src="'./detailShortEvent.html'"></div>
           </div>
+
         </ion-content>
       </ion-view>
     </script>
@@ -144,8 +155,8 @@
   <script type="text/ng-template" id="favorite.html">
     <ion-view>
       <ion-nav-buttons side="left">
-        <button class="{{navigation.pageHeaderLeft1.icon}}" ui-sref="{{navigation.pageHeaderLeft1.directionState}}"></button>
-        <button class="{{navigation.pageHeaderLeft2.icon}}" ui-sref="{{navigation.pageHeaderLeft2.directionState}}"></button>
+        <button class="{{navigation.pageHeaderLeft1.icon}}" ui-sref="{{navigation.pageHeaderLeft1.directionState}}" ng-disabled="{{disabled}}"></button>
+        <button class="{{navigation.pageHeaderLeft2.icon}}" ui-sref="{{navigation.pageHeaderLeft2.directionState}}" ng-disabled="{{disabled}}"></button>
         <button class="borderB {{navigation.pageHeaderLeft3.icon}}" ui-sref="{{navigation.pageHeaderLeft3.directionState}}"></button>
       </ion-nav-buttons>
       <ion-content id="view" ng-controller="FavoriteCtrl" scroll="false" data-tap-disabled="true">   
@@ -209,15 +220,15 @@
 
   <!-- your app's js -->
   <script src="js/app.js"></script>
-
   <script src="js/index.js"></script>
 
   <!-- Google JavaScript API -->
   <script src="http://maps.google.com/maps/api/js?sensor=false" type="text/javascript"></script>
-
-  <script src="http://google-maps-utility-library-v3.googlecode.com/svn/trunk/markerwithlabel/src/markerwithlabel.js"></script>
-
-  <script src="http://google-maps-utility-library-v3.googlecode.com/svn/trunk/markerclusterer/src/markerclusterer.js"></script>
-  
+  <script type="text/javascript">
+      if(typeof(google) !== 'undefined'){
+        document.write('<scr'+'ipt src="http://google-maps-utility-library-v3.googlecode.com/svn/trunk/markerwithlabel/src/markerwithlabel.js"></sc' + 'ript>');
+        document.write('<scr'+'ipt src="http://google-maps-utility-library-v3.googlecode.com/svn/trunk/markerclusterer/src/markerclusterer.js"></sc' + 'ript>');
+      }
+  </script>
   </body>
 </html>
